core/src/index.css
:root {
	--blue-0: hsl(211, 61%, 43%); /* accent */
	--blue-1: hsl(209, 62%, 50%);
	--blue-2: hsl(207, 73%, 57%);
	--blue-3: hsl(205, 79%, 60%);

	--green-0: #2b7e40; /* positive */
	--green-1: #36a14e;
	--green-2: #45c263;
	--green-3: #61db84;

	--red-0: #b32821; /* negative */
	--red-1: #d5342b;
	--red-2: #e74d47;
	--red-3: #f17673;

	--gray-0: #ffffff; /* light-gray-0 */
	--gray-1: #fafafa; /* light-gray-1 dark-gray-5 */
	--gray-2: #e4e4e7; /* light-gray-2 */
	--gray-3: #c3c4cb; /* light-gray-3 */
	--gray-4: #a1a1aa; /* dark-gray-4 */
	--gray-5: #71717a; /* light-gray-4 */
	--gray-6: #52525b; /* dark-gray-3 */
	--gray-7: #3f3f46; /* dark-gray-2 */
	--gray-8: #34353c; /* dark-gray-1 */
	--gray-9: #27272a; /* light-gray-5 dark-gray-0 */
	--gray-10: #18181b; /* dark-gray-negative-1 */

	/* Avoid Ubuntu Mono as it's significantly smaller than others at the same
	font size */
	--font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
		"Courier New", monospace;
	--font-sans: "Inter var", system-ui, -apple-system, sans-serif;
}

body {
	font-family: var(--font-sans);
	font-size: 14px;
	line-height: 16px;
	font-weight: 425;
}

:global(.light) body {
	background-color: var(--gray-0);
	color: var(--gray-9);
}
:global(.dark) body {
	background-color: var(--gray-8);
	color: var(--gray-1);
}

